[package]
name = "playground"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies]
stdweb = "0.4.20"

[dependencies.artichoke-backend]
git = "https://github.com/artichoke/artichoke"
rev = "55784bbc4ce20ba57c51bc6668557caf397a22d7"

[dependencies.artichoke-core]
git = "https://github.com/artichoke/artichoke"
rev = "55784bbc4ce20ba57c51bc6668557caf397a22d7"

[build-dependencies]
rustc_version = "0.2.3"
